API/client/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");

#root {
  height: 100%;
  margin-bottom: 15px;
}
html,
body {
  height: 100%;
  margin: 0px;
  font-size: 16px;
  font-family: "Roboto", sans-serif !important;
  background-image: linear-gradient(rgba(0, 0, 0, 0.72), rgba(0, 0, 0, 0.85)),
    url("./images/sigmund-R401qwThw7w-unsplash.jpg") !important;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  overflow: auto;
}

button {
  border-radius: 0 !important;
}

.landing-row {
  margin: 0;
  /*  background: linear-gradient(to top, #000000 0%, #072002 50%) !important;*/
}

nav.navbar {
  background-color: rgb(76, 187, 48) !important;
  font-family: "Roboto", sans-serif;
}

.container {
  height: 100%;
  width: 100%;
  margin: 0 0;
}

.left-col {
  margin-top: 15%;
  padding-left: 50px !important;
  padding-bottom: 0;
}

.right-col {
  margin-top: 15%;
}

/* containers */

#login-container {
  padding: 0;
  margin-top: 7em !important;
  height: 30em;
  width: 20em;
  border: none;
  margin: 0 auto;
}
.main-container {
  height: 100%;
  padding: 15px 15px;
}

.user-container {
  border-radius: 0.4rem;
  border: solid 1px #1aac3c;
  opacity: 0.8;
  background: rgb(15, 15, 15);
  height: 31%;
  width: 90% !important;
  padding: 10px 8px 20px !important;
  margin: 20px 0px 0px 40px !important;
}

.holdings-container {
  opacity: 0.8;
  margin: 15px 0px 0px 40px !important;
  width: 90% !important;
  border-radius: 0.4rem;
  background: rgb(15, 15, 15);
  padding: 10px 8px 20px !important;
  border: solid 1px #1aac3c;
}

.browse-container {
  margin: 40px 0px 0px 40px !important;
  width: 40% !important;
  height: 35%;
  border-radius: 0.4rem;
  background: rgb(15, 15, 15);
  padding: 10px;
}

.landing-container {
  height: 100%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

div.review-container {
  height: 15% !important;
}

img.splash-image {
  width: 500px;
}

.welcome-text {
  opacity: 0.9;
  color: white;
  font-size: 3rem;
}

.topia-color {
  color: rgb(76, 187, 48);
}

.description-text {
  margin-right: 500px;
  color: white;
}

.second-description-text {
  color: rgb(76, 187, 48);
  font-size: 2rem;
}

.account-button-text {
  color: rgb(228, 228, 228);
}

.user-icon {
  margin: 0px 8px 2px 0px;
}

.log-in-text {
  font-family: "Roboto", sans-serif;
  color: rgb(228, 228, 228);
}

.log-in-header {
  margin-top: 60px;
}

#login-title-row {
  padding: 0;
  display: block;
}

.key-icon {
  height: 45px;
  width: 45px;
  color: rgb(76, 187, 48);
}

input.username-input {
  border-radius: 0rem !important;
  width: 100% !important;
  border: transparent;
}

input.username-input:focus {
  border: transparent;
}

input,
select,
textarea.username-input:focus {
  border-radius: 0;
  outline: 0px !important;
  box-shadow: none !important;
  width: 10rem !important;
}

label.label-text {
  color: rgb(228, 228, 228);
}

button.log-in-button {
  border-radius: 0rem;
  background-color: #1aac3c !important;
  border-color: grey;
  border: 1px solid transparent !important;
  padding: 6px 6px;
  color: rgb(228, 228, 228);
  font-size: 1.2rem;
  width: 100%;
}

button.log-in-button:active {
  background-color: rgb(105, 179, 87) !important;
  border: 1px solid transparent !important;
  box-shadow: none !important;
}

button.log-in-button:focus {
  background-color: rgb(105, 179, 87) !important;
  border: 1px solid transparent !important;
  box-shadow: none !important;
}

button.log-in-button:hover {
  background-color: rgb(105, 179, 87) !important;
  border: 1px solid transparent;
  box-shadow: none !important;
}

.landing-page-buttons {
  width: 9.5rem;
  margin-left: 20px !important;
}

.heading-text {
  margin-left: 15px;
  color: white;
}

.titles-text {
  color: white;
  margin-left: 0 !important;
}

.symbols-text {
  color: rgb(156, 156, 156);
}

.name-text {
  color: rgb(233, 233, 233);
  width: 75px;
  margin: 0 !important;
}

#holdings {
  margin-left: 50%;
}

#holding-text {
  margin-left: 33%;
}

/* Columns */

.left-col {
}

.company-text {
  color: white;
  margin-left: 15px;
}

.share-text {
  color: rgb(233, 233, 233);
  margin-left: 15px;
}

.buy-sell-button {
  padding: 4px 12px !important;
  margin-left: 8px;
  font-size: 0.9rem !important;
}

.sell-button {
  padding: 4px 12px !important;
  margin-left: 15px;
  font-size: 0.9rem !important;
}

.buy-button {
  padding: 4px 12px !important;
  margin-left: 8px;
  font-size: 0.9rem !important;
}

.log-out-button {
  padding: 4px 12px !important;
  font-size: 0.9rem !important;
}

/* modal elements */

.modal-content {
  height: 455px;
  width: 600px !important;
  margin-top: 300px !important;
  border-radius: 0.4rem;
}

.modal-title {
  color: black;
}

.modal-body {
  height: 100%;
  padding: 0 !important;
}

.modal-total-text {
  margin-left: 25% !important;
}

.share-number-text {
  margin: 70px 10px 0px 20px !important;
}

.share-input {
  width: 50% !important;
}

svg.plus-square {
  display: block !important;
}

svg.minus-square {
  display: block !important;
}

.div-inline {
  display: inline-block;
}

.transaction-col {
  width: 20% !important;
}

hr {
  width: 500px;
}

.modal-input {
  border-radius: 0rem !important;
}

.review-button {
  border-radius: 0 !important;
  margin-top: 10px;
  width: 30%;
}

.cancel-button {
  width: 30%;
  border-radius: 0 !important;
  margin-top: 25px;
}

button.cancel-confirm-button {
  width: 100%;
  border-radius: 0 !important;
  margin-top: 25px;
  max-width: 150px;
}

.company-text {
  position: relative;
  right: 10px;
  color: #1aac3c;
  padding: 10px;
}

.result-text {
  position: relative;
  bottom: 28px;
  color: #1aac3c;
}

.confirm-span {
  margin-left: 10px;
}

.confirm-button {
  width: 30%;
  border-radius: 0 !important;
  margin-right: 10px;
}

button.confirm-order-button {
  height: 38px !important;
  width: 100%;
  border-radius: 0 !important;
  margin-top: 25px;
  max-width: 150px;
  background-color: #1aac3c !important;
  border-color: grey;
  border: 1px solid transparent !important;
}

.shares-current {
  color: rgb(156, 156, 156);
  margin-left: 15px;
}

.current-label {
  margin-top: 48px;
  margin-bottom: 0;
  display: block;
}

.stocks-select {
  height: 38px;
  border-radius: 0;
  padding: 5px;
}

.special-characters {
  color: #1aac3c;
}

.search-icon {
  position: relative;
  left: 180px;
  bottom: 32px;
  color: #1aac3c;
}

.x-icon {
  position: relative;
  left: 180px;
  bottom: 32px;
  color: #a51e0d;
}

.search-form {
  height: 100px;
}

.alert {
  margin-top: 1rem;
}

.review-alert {
  margin: 0px 25px;
  padding-top: 6px !important;
  padding-bottom: 6px !important;
}

button.close {
  padding: 6px 20px !important;
}

.css-1sxbfa7 {
  margin-top: 40px;
  margin-left: 50%;
  padding: 0;
}

.authenticate-spinner {
  margin-top: 10px;
  margin-left: 45%;
}

.user-row {
  width: 99%;
}

.no-holdings {
  color: rgb(233, 233, 233);
  margin-top: 1rem;
}

.alert-big {
  font-size: 0.98rem !important;
}

.alert-message {
  font-size: 0.9rem;
}

#formGridZip.total-modal-input {
  width: 80px !important;
  margin-left: 1.1rem !important;
  width: 7rem !important;
  border-radius: 0;
}
label.total-label {
  margin-left: 2rem !important;
}
input.quantity-modal-input {
  margin-left: 1.7rem !important;
  border-radius: 0;
  width: 4rem !important;
}

div.quantity-col {
  width: 80% !important;
}

label.buy-label {
  width: 140px !important;
  margin-left: 2.4rem !important;
}

form.buy-quantity-form {
  width: 70%;
  margin-right: 0 !important;
}

div.buy-quantity {
  width: 45%;
}

.review-company {
  padding: 20px;
}

@media only screen and (max-width: 772px) {
  button.landing-page-buttons {
    display: block !important;
    margin-bottom: 12px !important;
    font-weight: 500;
    color: rgb(233, 233, 233);
  }
  .welcome-text {
    font-size: 2.2rem;
    color: rgb(233, 233, 233);
  }

  .second-description-text {
    margin-right: 1rem;
    font-size: 1.5rem;
  }
  h4.description-text {
    color: rgb(233, 233, 233);
    font-size: 1.3rem;
    margin-right: 50px;
    margin-bottom: 20px !important;
  }

  img.splash-image {
    width: 200px;
  }

  form.auth-form {
    margin-right: 2rem;
  }

  .user-container {
    margin: auto !important;
    height: 38%;
    margin-top: 9px !important;
    margin-bottom: 9px !important;
  }

  .holdings-container {
    margin: 0 auto !important;
  }

  .log-out-button.btn {
    margin-left: 20px !important;
  }

  .modal-content {
    width: 90% !important;
    height: 30rem !important;
    margin: 0 auto;
    margin-top: 80px !important;
  }

  .purchase-modal {
    padding: 0px !important;
  }

  .review-button {
    width: 8rem;
  }

  .cancel-button {
    width: 8rem;
  }

  #formGridZip.total-modal-input {
    width: 80px !important;
    margin-right: 2rem !important;
    width: 6.9rem !important;
    border-radius: 0;
  }

  input.quantity-modal-input {
    margin-left: 1.7rem !important;
    border-radius: 0;
    width: 4rem !important;
  }

  div.quantity-col {
    width: 80% !important;
  }

  label.buy-label {
    width: 140px !important;
    margin-left: 2.4rem !important;
  }

  form.buy-quantity-form {
    width: 70%;
    margin-right: 0 !important;
  }

  div.buy-quantity {
    width: 45%;
  }

  label.total-label {
    margin-left: 2rem !important;
  }

  .search-icon {
    left: 98px;
  }

  .x-icon {
    left: 98px;
  }

  .result-text {
    font-size: 0.9rem;
  }
}

